[package]
name = "dusage"
version = "0.3.6"
edition = "2021"
authors = ["Mihai Galos <mihai@galos.one>"]
description = "💾 A command line disk usage information tool: disk usage (foreground), inodes (background)."
categories = ["command-line-utilities", "filesystem"]
keywords = ["disk", "disk-usage"]
repository = "https://github.com/mihaigalos/dusage"
license = "MIT"

[dependencies]
autoclap = "0.3.15"
byte-unit = "4.0.19"
clap = { version = "4.4.10", features = ["cargo", "string"] }
colored = "2"
nix = { version = "0.27.1", features = ["fs"] }
