[package]
name = "dusage"
version = "0.3.6"
edition = "2021"
authors = ["Mihai Galos <mihai@galos.one>"]
description = "💾 A command line disk usage information tool: disk usage (foreground), inodes (background)."
categories = ["command-line-utilities", "filesystem"]
keywords = ["disk", "disk-usage"]
repository = "https://github.com/mihaigalos/dusage"
license = "MIT"

[dependencies]
autoclap = "0.3.15"
byte-unit = "5.0.0"
clap = { version = "4.5.4", features = ["cargo", "string"] }
colored = "2.1.0"
nix = { version = "0.29.0", features = ["fs"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }
